--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         }
         #d3 a
         {
-            padding:20px;
-            color:black;
+            
+            content: black;
+            padding: 20px;
+            font-size: 25px;
 
         }
     </style>
@@ -50,7 +52,7 @@
     <div id="d3">
         <a href="resume.html">resume</a>
         <a href="about_project.html">project</a>
-        <a href="contact.html">contectM</a>
+        <a href="contact.html">contect</a>
     </div> 
     <div id="d1">
     <h3>Ankita chauhan  <i>(student)</i></h3> 
